[SC-11438] removed shadow from some right dialogs in crm contact, moved it down to not overlap the toolbar, added highlighting of Settings button, fixed optionChanged error

--- a/src/app/shared/common/toolbar/toolbar.component.less
+++ b/src/app/shared/common/toolbar/toolbar.component.less
@@ -624,6 +624,18 @@
             }
         }
 
+        [accesskey="settings"] {
+            &:after {
+                display: none;
+            }
+            &[button-pressed="true"] {
+                background-color: rgba(0, 174, 239, 0.04);
+                .dx-button-content {
+                    background: url('../../../../assets/common/icons/profile-gear-blue.svg') no-repeat 15px;
+                }
+            }
+        }
+
         [accesskey="pipeline"] {
             &[button-pressed="true"] {
                 .dx-button-content {
