--- a/src/root.component.less
+++ b/src/root.component.less
@@ -164,6 +164,11 @@ button {
         &.min-width-0 {
             min-width: 0;
         }
+        &.without-shadow .mat-dialog-container {
+            box-shadow: none;
+            border-left: 1px solid #dedede;
+            border-radius: 0;
+        }
         .mat-dialog-container {
             overflow: visible;
             padding: 0;
